--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+pizzashopapp/templates/pizzashop/app-1.35.1/resources/app.asar filter=lfs diff=lfs merge=lfs -text
